syntax = "proto3";

package sift.protobuf_descriptors.v2;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {title: "Protobuf Descriptor Service"}
};

service ProtobufDescriptorService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "Service to programmatically interact with protobuf descriptors used for protobuf ingestion."
    external_docs: {
      url: "/ingestion/protobuf_ingestion";
      description: "Read more about what protobuf ingestion.";
    }
  };

  // Used to register a protobuf message to be ingested.
  rpc AddProtobufDescriptor(AddProtobufDescriptorRequest) returns (AddProtobufDescriptorResponse) {
    option (google.api.http) = {post: "/api/v2/protobuf-descriptors:add"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "AddProtobufDescriptor"
      description: "Used to register a protobuf message to be ingested."
      operation_id: "ProtobufDescriptorService_AddProtobufDescriptorV2"
    };
  }

  // Used to check if a protobuf descriptor is compatible with the existing descriptors.
  rpc CheckProtobufDescriptorCompatibility(CheckProtobufDescriptorCompatibilityRequest) returns (CheckProtobufDescriptorCompatibilityResponse) {
    option (google.api.http) = {post: "/api/v2/protobuf-descriptors:check-compatibility"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "CheckProtobufDescriptorCompatibility"
      description: "Used to check if a protobuf descriptor is compatible with the existing descriptors."
      operation_id: "ProtobufDescriptorService_CheckProtobufDescriptorCompatibilityV2"
    };
  }

  // Delete protobuf descriptors of that match the provided `namespace` and `message_type_full_name`.
  rpc DeleteProtobufDescriptors(DeleteProtobufDescriptorsRequest) returns (DeleteProtobufDescriptorsResponse) {
    option (google.api.http) = {delete: "/api/v2/protobuf-descriptors"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "DeleteProtobufDescriptors"
      description: "Delete protobuf descriptors of that match the provided `namespace` and `message_type_full_name`."
      operation_id: "ProtobufDescriptorService_DeleteProtobufDescriptorsV2"
    };
  }

  // Retrieve protobuf descriptors using an optional filter.
  rpc ListProtobufDescriptors(ListProtobufDescriptorsRequest) returns (ListProtobufDescriptorsResponse) {
    option (google.api.http) = {get: "/api/v2/protobuf-descriptors"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "ListProtobufDescriptors"
      description: "Retrieve protobuf descriptors using an optional filter."
      operation_id: "ProtobufDescriptorService_ListProtobufDescriptorsV2"
    };
  }
}

message DeleteProtobufDescriptorsRequest {
  string message_type_full_name = 1 [deprecated = true];
  string namespace = 2 [deprecated = true];
  string organization_id = 3;
  string protobuf_descriptor_id = 4;
}

message DeleteProtobufDescriptorsResponse {}

message AddProtobufDescriptorRequest {
  ProtobufDescriptor protobuf_descriptor = 1;

  // If set to true, the service will ignore checks that this descriptor has already been registered
  // and will ensure that it is registered as the latest proto descriptor for the message type.
  bool force_duplicate_registration = 2;
}

message AddProtobufDescriptorResponse {
  ProtobufDescriptor protobuf_descriptor = 1;
}

message CheckProtobufDescriptorCompatibilityRequest {
  ProtobufDescriptor protobuf_descriptor = 1;
}

message IncompatibleProtobufField {
  string protobuf_descriptor_id = 1;
  string message_full_name = 2;
  string desired_field_name = 3;
  string current_field_name = 4;
  string field_number = 5;
  string reason = 6;
  string details = 7;
} 

message CheckProtobufDescriptorCompatibilityResponse {
  bool is_valid = 1;
  repeated IncompatibleProtobufField incompatible_protobuf_descriptor_fields = 2;
}

message ProtobufDescriptor {
  string message_type_full_name = 1;
  bytes file_descriptor_set = 2;
  string proto_file_name = 3;
  string namespace = 4;
  string protobuf_descriptor_id = 5;
}

// The request for a call to `ProtobufDescriptorService_ListProtobufDescriptors` to retrieve protobuf descriptors.
message ListProtobufDescriptorsRequest {
  // The maximum number of protobuf descriptors to return.
  // The service may return fewer than this value.
  // If unspecified, at most 50 protobuf descriptors will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  uint32 page_size = 1 [(google.api.field_behavior) = OPTIONAL];

  // A page token, received from a previous `ListProtobufDescriptors` call.
  // Provide this to retrieve the subsequent page.
  // When paginating, all other parameters provided to `ListProtobufDescriptors` must match
  // the call that provided the page token.
  string page_token = 2 [(google.api.field_behavior) = OPTIONAL];

  // A [Common Expression Language (CEL)](https://github.com/google/cel-spec) filter string.
  // Available fields to filter by are `protobuf_descriptor_id`, `proto_file_name`, `namespace`, and `message_type_full_name`.
  // For further information about how to use CELs, please refer to [this guide](https://github.com/google/cel-spec/blob/master/doc/langdef.md#standard-definitions).
  // For more information about the fields used for filtering, please refer to [this definition](/protocol-buffers/documentation#protobufdescriptor). Optional.
  string filter = 3 [(google.api.field_behavior) = OPTIONAL];

  // How to order the retrieved protobuf descriptors. Formatted as a comma-separated string i.e. "FIELD_NAME[ desc],...".
  // Available fields to order_by are `created_date`, `modified_date`, and `message_type_full_name` and `namespace`.
  // If left empty, items are ordered by `created_date` in ascending order (oldest-first).
  // For more information about the format of this field, read [this](https://google.aip.dev/132#ordering)
  // Example: "created_date desc,modified_date"
  string order_by = 4 [(google.api.field_behavior) = OPTIONAL];
}

// The response of a call to `ProtobufDescriptorService_ListProtobufDescriptors`.
message ListProtobufDescriptorsResponse {
  repeated ProtobufDescriptor protobuf_descriptors = 1;
  string next_page_token = 2;
}
